--- a/src/main/resources/at/javatetris/project/fxml/info_en.fxml
+++ b/src/main/resources/at/javatetris/project/fxml/info_en.fxml
@@ -49,7 +49,7 @@
                </font>
             </Text>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="(c) Orangensaft Studios" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="version: pre-prod (0.02)">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="" fx:id="versionTxt">
                <VBox.margin>
                   <Insets top="30.0" />
                </VBox.margin>
