--- a/src/main/resources/at/javatetris/project/fxml/info_de.fxml
+++ b/src/main/resources/at/javatetris/project/fxml/info_de.fxml
@@ -59,7 +59,7 @@
             </Text>
          </children>
       </VBox>
-      <ImageView fitHeight="78.0" fitWidth="86.0" layoutY="1.0" onMouseClicked="#ButtonBack" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="78.0" fitWidth="86.0" layoutY="1.0" onMouseClicked="#buttonBack" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../icons/arrowBack_icon.png" />
          </image>
