--- a/src/main/resources/at/javatetris/project/fxml/account_de.fxml
+++ b/src/main/resources/at/javatetris/project/fxml/account_de.fxml
@@ -13,7 +13,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.javatetris.project.AccountGUI">
    <children>
       <ImageView fitHeight="85.0" fitWidth="95.0" onMouseClicked="#buttonBack" pickOnBounds="true" preserveRatio="true">
@@ -90,7 +89,7 @@
                         <Insets top="10.0" />
                      </HBox.margin>
                   </Text>
-                  <Text fx:id="loggedInAs" strokeType="OUTSIDE" strokeWidth="0.0" text="USERNAME_NOT_FOUND">
+                  <Text fx:id="loggedInAs" strokeType="OUTSIDE" strokeWidth="0.0" text="NO_USER_LOGGED_IN">
                      <HBox.margin>
                         <Insets top="10.0" />
                      </HBox.margin>
