--- a/src/main/resources/at/javatetris/project/fxml/menu_en.fxml
+++ b/src/main/resources/at/javatetris/project/fxml/menu_en.fxml
@@ -34,14 +34,11 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.javatetris.project.MenuGUI">
    <children>
@@ -83,21 +80,9 @@
             </VBox>
             <VBox prefHeight="217.0" prefWidth="211.0" spacing="34.0">
                <children>
-                  <Button mnemonicParsing="false" onAction="#chooseModeClicked" prefHeight="47.0" prefWidth="212.0" style="-fx-background-color: black;" text="Choose Mode" textFill="WHITE">
-                     <tooltip>
-                        <Tooltip text="Click to choose a mode" />
-                     </tooltip>
-                  </Button>
-                  <Button mnemonicParsing="false" prefHeight="47.0" prefWidth="212.0" style="-fx-background-color: black;" text="Leaderboard / Statistics" textFill="WHITE">
-                     <tooltip>
-                        <Tooltip text="Click to open leaderboard/statistics" />
-                     </tooltip>
-                  </Button>
-                  <Button mnemonicParsing="false" onMouseClicked="#closeJavaTetris" prefHeight="47.0" prefWidth="212.0" style="-fx-background-color: red;" text="Close" textFill="WHITE">
-                     <tooltip>
-                        <Tooltip text="Close &amp; return to desktop" />
-                     </tooltip>
-                  </Button>
+                  <Button mnemonicParsing="false" onAction="#chooseModeClicked" prefHeight="47.0" prefWidth="212.0" style="-fx-background-color: black;" text="Choose Mode" textFill="WHITE" />
+                  <Button mnemonicParsing="false" prefHeight="47.0" prefWidth="212.0" style="-fx-background-color: black;" text="Leaderboard / Statistics" textFill="WHITE" />
+                  <Button mnemonicParsing="false" onMouseClicked="#closeJavaTetris" prefHeight="47.0" prefWidth="212.0" style="-fx-background-color: red;" text="Close" textFill="WHITE" />
                </children>
             </VBox>
          </children>
@@ -124,10 +109,10 @@
             </ImageView>
          </children>
       </HBox>
-      <Text layoutX="216.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="JavaTetris" wrappingWidth="203.9999755859376">
-         <font>
-            <Font size="46.0" />
-         </font>
-      </Text>
+      <ImageView fitHeight="82.0" fitWidth="331.0" layoutX="135.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../icons/jt_logo.jpg" />
+         </image>
+      </ImageView>
    </children>
 </Pane>
