--- a/src/main/resources/at/javatetris/project/fxml/controls_de.fxml
+++ b/src/main/resources/at/javatetris/project/fxml/controls_de.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -17,6 +18,9 @@
          <image>
             <Image url="@../icons/arrowBack_icon.png" />
          </image>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </ImageView>
       <Line endX="136.0" layoutX="464.0" layoutY="78.0" startX="-466.0" />
       <VBox alignment="TOP_CENTER" layoutX="78.0" layoutY="5.0" prefHeight="390.0" prefWidth="464.0">
@@ -48,6 +52,9 @@
                            <font>
                               <Font size="20.0" />
                            </font>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
                         </Text>
                      </children>
                   </HBox>
@@ -68,53 +75,9 @@
                            <font>
                               <Font size="20.0" />
                            </font>
-                        </Text>
-                     </children>
-                  </HBox>
-               </children>
-            </HBox>
-            <HBox prefHeight="55.0" prefWidth="464.0" spacing="30.0">
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-               <children>
-                  <HBox prefHeight="60.0" prefWidth="200.0">
-                     <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Links drehen" underline="true">
-                           <font>
-                              <Font size="20.0" />
-                           </font>
-                           <HBox.margin>
-                              <Insets top="10.0" />
-                           </HBox.margin>
-                        </Text>
-                        <Text fx:id="rotateLeftKey" onMouseClicked="#rotateLeftField" strokeType="OUTSIDE" strokeWidth="0.0" text="KEY" wrappingWidth="48.7734375">
-                           <HBox.margin>
-                              <Insets left="30.0" top="10.0" />
-                           </HBox.margin>
-                           <font>
-                              <Font size="20.0" />
-                           </font>
-                        </Text>
-                     </children>
-                  </HBox>
-                  <HBox prefHeight="20.0" prefWidth="200.0">
-                     <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Rechts drehen" underline="true">
-                           <font>
-                              <Font size="20.0" />
-                           </font>
-                           <HBox.margin>
-                              <Insets top="10.0" />
-                           </HBox.margin>
-                        </Text>
-                        <Text fx:id="rotateRightKey" onMouseClicked="#rotateRightField" strokeType="OUTSIDE" strokeWidth="0.0" text="KEY" wrappingWidth="48.7734375">
-                           <HBox.margin>
-                              <Insets left="30.0" top="10.0" />
-                           </HBox.margin>
-                           <font>
-                              <Font size="20.0" />
-                           </font>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
                         </Text>
                      </children>
                   </HBox>
@@ -139,6 +102,9 @@
                            <font>
                               <Font size="20.0" />
                            </font>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
                         </Text>
                      </children>
                   </HBox>
@@ -159,6 +125,39 @@
                            <font>
                               <Font size="20.0" />
                            </font>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Text>
+                     </children>
+                  </HBox>
+               </children>
+            </HBox>
+            <HBox prefHeight="55.0" prefWidth="464.0" spacing="30.0">
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+               <children>
+                  <HBox prefHeight="60.0" prefWidth="200.0">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Drehen" underline="true">
+                           <font>
+                              <Font size="20.0" />
+                           </font>
+                           <HBox.margin>
+                              <Insets top="10.0" />
+                           </HBox.margin>
+                        </Text>
+                        <Text fx:id="rotateKey" onMouseClicked="#rotateField" strokeType="OUTSIDE" strokeWidth="0.0" text="KEY" wrappingWidth="48.7734375">
+                           <HBox.margin>
+                              <Insets left="75.0" top="10.0" />
+                           </HBox.margin>
+                           <font>
+                              <Font size="20.0" />
+                           </font>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
                         </Text>
                      </children>
                   </HBox>
@@ -166,9 +165,13 @@
             </HBox>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="30.0">
                <children>
-                  <Button fx:id="resetControlsBtn" mnemonicParsing="false" onAction="#resetControls" prefHeight="48.0" prefWidth="220.0" style="-fx-background-color: red;" text="Steuerung zurücksetzen" textFill="WHITE" />
+                  <Button fx:id="resetControlsBtn" mnemonicParsing="false" onAction="#resetControls" prefHeight="48.0" prefWidth="220.0" style="-fx-background-color: red;" text="Steuerung zurücksetzen" textFill="WHITE">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></Button>
                </children>
             </HBox>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Steuerung ist auch immer mit den Pfeiltasten möglich" />
          </children>
       </VBox>
    </children>
