--- a/src/main/resources/at/javatetris/project/fxml/info_de.fxml
+++ b/src/main/resources/at/javatetris/project/fxml/info_de.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
@@ -20,7 +21,7 @@
             </Text>
             <ImageView fitHeight="49.0" fitWidth="299.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../icons/jt_logo.jpg" />
+                  <Image url="@../icons/jt_logo.png" />
                </image>
                <VBox.margin>
                   <Insets top="15.0" />
@@ -70,6 +71,9 @@
          <image>
             <Image url="@../icons/arrowBack_icon.png" />
          </image>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </ImageView>
       <Line endX="136.0" layoutX="464.0" layoutY="79.0" startX="-466.0" />
       <Line endX="119.0" layoutX="481.0" layoutY="340.0" startX="-481.0" />
