--- a/src/main/resources/at/javatetris/project/fxml/menu_en.fxml
+++ b/src/main/resources/at/javatetris/project/fxml/menu_en.fxml
@@ -33,6 +33,7 @@
 -->
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -80,9 +81,18 @@
             </VBox>
             <VBox prefHeight="217.0" prefWidth="211.0" spacing="34.0">
                <children>
-                  <Button mnemonicParsing="false" onAction="#chooseModeClicked" prefHeight="47.0" prefWidth="212.0" style="-fx-background-color: black;" text="Choose Mode" textFill="WHITE" />
-                  <Button mnemonicParsing="false" prefHeight="47.0" prefWidth="212.0" style="-fx-background-color: black;" text="Leaderboard / Statistics" textFill="WHITE" />
-                  <Button mnemonicParsing="false" onMouseClicked="#closeJavaTetris" prefHeight="47.0" prefWidth="212.0" style="-fx-background-color: red;" text="Close" textFill="WHITE" />
+                  <Button mnemonicParsing="false" onAction="#chooseModeClicked" prefHeight="47.0" prefWidth="212.0" style="-fx-background-color: black;" text="Choose Mode" textFill="WHITE">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></Button>
+                  <Button mnemonicParsing="false" onAction="#leaderboardClicked" opacity="0.3" prefHeight="47.0" prefWidth="212.0" style="-fx-background-color: black;" text="Leaderboard / Statistics" textFill="WHITE">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></Button>
+                  <Button mnemonicParsing="false" onMouseClicked="#closeJavaTetris" prefHeight="47.0" prefWidth="212.0" style="-fx-background-color: red;" text="Close" textFill="WHITE">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></Button>
                </children>
             </VBox>
          </children>
@@ -93,11 +103,17 @@
                <image>
                   <Image url="@../icons/settings_icon.png" />
                </image>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </ImageView>
             <ImageView fitHeight="50.0" fitWidth="56.0" onMouseClicked="#accountClicked" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../icons/account_icon.png" />
                </image>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </ImageView>
             <ImageView fitHeight="50.0" fitWidth="56.0" onMouseClicked="#infoClicked" pickOnBounds="true" preserveRatio="true">
                <HBox.margin>
@@ -106,12 +122,15 @@
                <image>
                   <Image url="@../icons/info_icon.png" />
                </image>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </ImageView>
          </children>
       </HBox>
-      <ImageView fitHeight="82.0" fitWidth="331.0" layoutX="135.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="93.0" fitWidth="581.0" layoutX="45.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../icons/jt_logo.jpg" />
+            <Image url="@../icons/jt_giflogo.gif" />
          </image>
       </ImageView>
    </children>
