--- a/src/main/resources/at/javatetris/project/fxml/settings_de.fxml
+++ b/src/main/resources/at/javatetris/project/fxml/settings_de.fxml
@@ -3,6 +3,7 @@
 <?import java.lang.String?>
 <?import javafx.collections.FXCollections?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Slider?>
@@ -47,6 +48,9 @@
                      <HBox.margin>
                         <Insets top="20.0" />
                      </HBox.margin>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Slider>
                </children>
                <padding>
@@ -81,17 +85,29 @@
                      <HBox.margin>
                         <Insets left="30.0" top="20.0" />
                      </HBox.margin>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </ChoiceBox>
                </children>
                <VBox.margin>
                   <Insets />
                </VBox.margin>
             </HBox>
-            <Button fx:id="keymapBtn" mnemonicParsing="false" onAction="#controlsClicked" prefHeight="46.0" prefWidth="291.0" style="-fx-background-color: black;" text="Keymapping / Steuerung" textFill="WHITE" />
+            <Button fx:id="keymapBtn" mnemonicParsing="false" onAction="#controlsClicked" prefHeight="46.0" prefWidth="291.0" style="-fx-background-color: black;" text="Keymapping / Steuerung" textFill="WHITE">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="30.0">
                <children>
-                  <Button fx:id="setSettingsBtn" mnemonicParsing="false" onAction="#setSettings" prefHeight="48.0" prefWidth="220.0" style="-fx-background-color: green;" text="Einstellung anwenden" textFill="WHITE" />
-                  <Button fx:id="resetSettingsBtn" mnemonicParsing="false" onAction="#resetSettings" prefHeight="48.0" prefWidth="220.0" style="-fx-background-color: red;" text="Einstellung zurücksetzen" textFill="WHITE" />
+                  <Button fx:id="setSettingsBtn" mnemonicParsing="false" onAction="#setSettings" prefHeight="48.0" prefWidth="220.0" style="-fx-background-color: green;" text="Einstellung anwenden" textFill="WHITE">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></Button>
+                  <Button fx:id="resetSettingsBtn" mnemonicParsing="false" onAction="#resetSettings" prefHeight="48.0" prefWidth="220.0" style="-fx-background-color: red;" text="Einstellung zurücksetzen" textFill="WHITE">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></Button>
                </children>
             </HBox>
          </children>
@@ -100,6 +116,9 @@
          <image>
             <Image url="@../icons/arrowBack_icon.png" />
          </image>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </ImageView>
    </children>
 </Pane>
