--- a/src/main/resources/at/javatetris/project/fxml/settings_de.fxml
+++ b/src/main/resources/at/javatetris/project/fxml/settings_de.fxml
@@ -26,7 +26,7 @@
                   <Font size="52.0" />
                </font>
             </Text>
-            <HBox prefHeight="61.0" prefWidth="392.0" spacing="50.0">
+            <HBox prefHeight="61.0" prefWidth="392.0">
                <children>
                   <Text fx:id="musicTxt" strokeType="OUTSIDE" strokeWidth="0.0" text="Musik">
                      <font>
@@ -38,20 +38,25 @@
                   </Text>
                   <ImageView fitHeight="41.0" fitWidth="54.0" pickOnBounds="true" preserveRatio="true">
                      <HBox.margin>
-                        <Insets top="15.0" />
+                        <Insets left="45.0" top="15.0" />
                      </HBox.margin>
                      <image>
                         <Image url="@../icons/speaker_icon.png" />
                      </image>
                   </ImageView>
-                  <Slider prefHeight="14.0" prefWidth="186.0">
+                  <Slider fx:id="musicVolumeSlider" prefHeight="14.0" prefWidth="186.0">
                      <HBox.margin>
-                        <Insets top="20.0" />
+                        <Insets left="55.0" top="20.0" />
                      </HBox.margin>
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Slider>
+                  <Text fx:id="volumeText" strokeType="OUTSIDE" strokeWidth="0.0" text="0">
+                     <HBox.margin>
+                        <Insets left="5.0" top="18.0" />
+                     </HBox.margin>
+                  </Text>
                </children>
                <padding>
                   <Insets top="10.0" />
