--- a/src/main/resources/at/javatetris/project/fxml/account_de.fxml
+++ b/src/main/resources/at/javatetris/project/fxml/account_de.fxml
@@ -111,5 +111,10 @@
             </HBox>
          </children>
       </VBox>
+      <Text layoutX="514.0" layoutY="380.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Warte ..." fx:id="loading">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Text>
    </children>
 </Pane>
